use faster `getStdin()` rather than `getStdin.buffer()` as possible
https://github.com/sindresorhus/get-stdin/blob/v5.0.1/index.js

getStdin() -> simple string concatenation
getStdin.buffer() -> Buffer.concat()

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "pretest": "eslint --fix --format=codeframe index.js test.js test-stdin.js",
     "test-only": "node test.js && node test-stdin.js < .gitattributes",
-    "test": "npm run-script test-only --silent",
-    "coverage": "nyc npm run-script test-only --silent"
+    "test": "nyc --reporter=html --reporter=text npm run-script test-only --silent"
   },
   "license": "MIT",
   "files": [
