--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 if: branch !~ ^v\d
-dist: xenial
 language: node_js
 node_js: node
-after_script: node_modules/.bin/nyc report --reporter=text-lcov | nyc coveralls
+jobs:
+  include:
+  - dist: xenial
+    after_success: node_modules/.bin/nyc report --reporter=text-lcov | npx coveralls
+  - os: windows
+    script: node test.js && node test-stdin.js < .gitattributes
